--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timtools",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "private": true,
   "description": "Stack de développement frontend",
   "author": {
@@ -10,7 +10,9 @@
     "start": "cross-env NODE_ENV=development gulp --openssl-legacy-provider",
     "build": "cross-env NODE_ENV=production gulp --openssl-legacy-provider build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "swiper": "^11.1.9"
+  },
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.22.10",
